2008-11-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/scplugin.c, src/gui.c:
   Make use of ui_image_menu_item_new().


2008-11-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/speller.c, src/gui.c:
   Update to Geany API 108 - indicator functions renamed.


2008-11-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/speller.c, src/speller.h, src/gui.c:
   When replacing a misspelled word with a suggestion, add this
   replacement to the spell checker to remember it in further checks.
 * src/gui.c, src/scplugin.c, src/speller.c, src/gui.h, src/scplugin.h:
   Move SpellClickInfo struct into gui.c.
 * src/gui.c:
   Remove SpellClickInfo::suggs and retrieve the suggestion text from
   the menu item label directly.
   Remove the limit of showing a maximum of 10 suggestions, instead
   add sub menus for more suggestions if available, similar to what
   'gtkspell' does.
   Fix an endless loop and some mismatches in clearing indicators when
   using 'Add to Dictionary' and 'Ignore All'.


2008-11-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/speller.c, src/speller.h, src/gui.c:
   When using 'Ignore All', add the word to ignore to the enchant
   session list to really ignore it for further checks, too.


2008-11-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/speller.c, src/speller.h, src/gui.c:
   Check the Scintilla lexing style for the word to check and
   skip any further checks if the word is not a comment, string
   or has any other style which belongs to the filetype language of
   the current document. This makes the whole plugin much more useful,
   eliminates many false positives and increases speed a lot.


2008-10-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/speller.c, src/speller.h, src/scplugin.c:
   Improve the auto-detection of the user's language (handle locales
   like 'de_DE.UTF-8' correctly).
 * src/gui.c: