@@ -1,3 +1,12 @@
+2008-11-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/gui.c:
+   Show the 'Suggestions' sub menu in the editor menu also when we
+   have a misspelled word but no suggestions.
+   If there is a selection use it instead of the current word when
+   updating the editor menu.
+
+
 2008-11-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/scplugin.c, src/gui.c:
